[project]
name = "probabilistic-spread-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.7.0",
    "ipykernel>=6.30.0",
    "lightgbm",
    "matplotlib>=3.10.3",
    "numpy>=1.23.5",
    "pandas>=2.3.1",
    "rich>=14.0.0",
    "ruff>=0.12.4",
    "scikit-learn>=1.7.1",
    "scipy==1.10",
    "xgboost>=3.0.2",
]
